--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@akanass/rx-http-request": "^3.3.0",
     "@material-ui/core": "^4.10.0",
     "react": "^16.13.1",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
     "react-pure-lifecycle": "^3.0.0",
     "react-redux": "^7.2.0",
